feat: create presigned url from image uploaded
